test/lit/pto/issue708_zero_valid_tgemv_invalid.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// RUN: not ptoas --pto-arch=a5 --emit-pto-ir %s 2>&1 | FileCheck %s

module attributes {"pto.device-spec" = "Ascend910B3"} {
  func.func @issue708_reject_zero_dst_row_tgemv() attributes {pto.kernel_kind = #pto.kernel_kind<cube>} {
    %lhs = pto.alloc_tile : !pto.tile_buf<loc=left, dtype=f16, rows=1, cols=32, v_row=1, v_col=32, blayout=col_major, slayout=row_major, fractal=512, pad=0>
    %rhs = pto.alloc_tile : !pto.tile_buf<loc=right, dtype=f16, rows=32, cols=16, v_row=32, v_col=16, blayout=row_major, slayout=col_major, fractal=512, pad=0>
    %dst = pto.alloc_tile : !pto.tile_buf<loc=acc, dtype=f32, rows=1, cols=16, v_row=0, v_col=16, blayout=col_major, slayout=row_major, fractal=1024, pad=0>
    pto.tgemv ins(%lhs, %rhs : !pto.tile_buf<loc=left, dtype=f16, rows=1, cols=32, v_row=1, v_col=32, blayout=col_major, slayout=row_major, fractal=512, pad=0>, !pto.tile_buf<loc=right, dtype=f16, rows=32, cols=16, v_row=32, v_col=16, blayout=row_major, slayout=col_major, fractal=512, pad=0>)
              outs(%dst : !pto.tile_buf<loc=acc, dtype=f32, rows=1, cols=16, v_row=0, v_col=16, blayout=col_major, slayout=row_major, fractal=1024, pad=0>)
    return
  }
}

// CHECK: error: 'pto.tgemv' op expects dst valid_shape[0] to be 1 for tgemv
